# affmpeg

app/: CMakeLists.txt  README.md  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  NativePlayer.cpp  arminfo.cpp  ffmpeg_config.cpp  nlog.h
app/src/main/java/dai/android/ffmpeg/: MainActivity.java
app/src/main/java/dai/android/ffmpeg/V/: FConfigActivity.java  SimpleLiveActivity.java
app/src/main/java/dai/android/ffmpeg/player/: NativePlayer.java
app/src/main/res/drawable/: spacer_medium.xml
app/src/main/res/layout/: activity_fconfig.xml  activity_main.xml  activity_simple_live.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
